CRUD de evento terminado, sin gestion de errores