@@ -6,6 +6,7 @@ import lombok.Builder;
 import lombok.Data;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @Builder
@@ -15,15 +16,15 @@ public class AlmacenResponseDto {
     private String descripcion;
     private String provincia;
     private boolean estado;
-    private List<Conductor> conductores;
+    private List<ConductorResponseDto> conductores;
 
     public static AlmacenResponseDto createAlmacenResponseDtoFromAlmacen(Almacen almacen) {
         return AlmacenResponseDto.builder()
                 .nombre(almacen.getNombre())
                 .descripcion(almacen.getDescripcion())
                 .estado(almacen.getEsActivo())
-                .conductores(almacen.getConductores().stream().toList())
-                .provincia(almacen.getDireccion())
+                .conductores(almacen.getConductores().stream().map(ConductorResponseDto::createConductorResponseDtoFromConductor).collect(Collectors.toList()))
+                .provincia(almacen.getProvincia().getNombre())
                 .build();
     }
 
